fix(config): nitpicks

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,4 +1,4 @@
-name: Sync Files
+name: Synchronize config file
 on:
   push:
     branches:
@@ -13,5 +13,5 @@ jobs:
       - name: Run Repo File Sync Action
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
-          GH_PAT: ${{ secrets.GH_PAT }}
-          CONFIG_PATH: sync.yml
+          GH_PAT: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          CONFIG_PATH: .github/config/sync-config.yml
