--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,4 +15,4 @@ jobs:
         with:
           GH_PAT: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           CONFIG_PATH: .github/config/sync-config.yml
-          BRANCH_PREFIX: restqa
+          BRANCH_PREFIX: restqa-sync
